	13005 Angelic Wing Dagger:	NEED INFO.
	1308 Golden Axe:		NEED INFO.
	13160, 13161 Destroyer:	Can break target's armor when fired at close range.
	-----
	4296 Cramp Card:	Temp Plug: 10z per mob-level on a 3% chance.
	7458 Fortune Horn:	It's a custom name ^^;
	12017 Speed Decreasing Potion: A potion which decreases the moving speed of a character for a duration.
	-----

========================
03/12
	* Updated the "AddEffWhenHit" cards [Playtester]
	- chances got lowered according to Aegis, Freya, cRO and euRO
	- Lion Mask has 5% chance of silence instead of 3%
03/11
	* Fixed some autocast rates of the new headgears [Playtester]
03/09
	* Updated various one-handed weapons [Playtester]
03/08
	* Added new map_cache.dat containing every map you need at the moment [DracoRPG]
	  - Beware as it was built by a little-endian (i386), for a little-endian!
	  - It will be updated by devs when new maps will be added to eA
03/07
	* Updated skills that shouldn't ignore the target's cards: Smoking, Fling,
	  Zenynage. [Skotlex]
03/06
	* Fixed Flying Angel headgear [Playtester]
	* Corrected the NK values of skills (0x08 -> 0x80): Self Destruction,
	  Smoking, Pressure, Fling, Zeny Nage, BioExplosion
	* Soul Burn & Gravitation got NK 0x80 (previously hardcoded) [Skotlex]
	* Added various new headgears thanks to Argatlahm [Playtester]
	- some headgears might not be fully official, feel free to report bugs if you find any
	- also updated item_db.sql
	* Fixed some weapons and their prices [Playtester]
	* Fixed Aegis name, price and weight of all special type items [Playtester]
	- beware of exploits due to the changed prices
	* Soul Breaker no longer ignores elemental adjustments. [Skotlex]
	* Added the 2 new packet versions to packet_db.txt [Zephiris]
03/02
	* Updated the stun length to 5 secs of: Meteor Storm, Sonic Blow, Throw
	  Stone, Sightless Raid, Smite, Cart Termination.
02/24
	* Updated skill_db.txt using the new nk values in hexadecimal. [Skotlex]
02/23